# skyrim-cell-dump-py

./: Cargo.toml  pyproject.toml
src/: lib.rs
