[package]
name = "skyrim-cell-dump-py"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "skyrim_cell_dump"
crate-type = ["cdylib"]

[dependencies]
seahash = "4.1"
skyrim-cell-dump = "0.3.3"
pyo3 = { version = "0.16.1", features = ["extension-module"] }